--- a/index.html
+++ b/index.html
@@ -379,10 +379,8 @@
                 <div class="num-big">112 / 911</div>
                 <div class="num-title">Universel & International</div>
                 <div class="num-desc">
-                    Reconnu par l'ONU et l'Union Internationale des Télécoms (UIT). 
-                    Le <strong>112</strong> fonctionne dans toute l'UE. 
-                    Le <strong>911</strong> aux USA. 
-                    En cas de doute à l'étranger, ce sont les numéros qui sauvent, même sans réseau !
+                    Fonctionne partout à travers le monde.Reconnu par l'ONU.
+                    Si on est pas sûr de qui appeler > 911 ou 112 sauvent, même sans réseau !
                 </div>
             </div>
             <div class="num-card" style="border-top: 5px solid #118ab2">
