--- a/index.html
+++ b/index.html
@@ -379,8 +379,7 @@
                 <div class="num-big">112 / 911</div>
                 <div class="num-title">Universel & International</div>
                 <div class="num-desc">
-                    Fonctionne partout à travers le monde.Reconnu par l'ONU.
-                    Si on est pas sûr de qui appeler > 911 ou 112 sauvent, même sans réseau !
+                    Numéros universelles et internationales, fonctionnent à travers toute la planète, en cas d'urgence immédiate si on ne sait pas qui appeler on peut appeler le 911.
                 </div>
             </div>
             <div class="num-card" style="border-top: 5px solid #118ab2">
